[gd_scene load_steps=4 format=3 uid="uid://dymwkq732leqf"]

[ext_resource type="Script" path="res://Tiles/tile_basic.gd" id="1_i3ggq"]
[ext_resource type="Material" uid="uid://dosn66orqwctd" path="res://outLine.tres" id="2_alpne"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kknlp"]
size = Vector2(35, 36)

[node name="TileBasic" type="Node2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_i3ggq")
colorTile = Color(0.156863, 0.588235, 0.717647, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -21.0
offset_right = 21.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
material = ExtResource("2_alpne")
scale = Vector2(0.13, 0.13)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_kknlp")

[node name="Label" type="Label" parent="."]
offset_left = -18.0
offset_top = -22.0
offset_bottom = 1.0
scale = Vector2(1.5, 1.5)
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
